# aroww-db

./: .gitignore  CMakeLists.txt  Makefile  README.md  aroww.py  client.cpp  commands.cpp  commands.hpp  commands.proto  echo.cpp  engine.cpp  engine.hpp  main.cpp  server.c  server.cpp  tests.cpp  ui.cpp  ui.hpp
_sketches/: Makefile  example1.cpp  example2.cpp  memory_test.cpp
bench/: ar.cpp  base_connection.cpp  makefile  postgers_connection.cpp  run.cpp
benchmark/: CMakeLists.txt  ar.cpp  base_connection.hpp  generator.py  pg.cpp  run.cpp
client/: .gitignore  Makefile  aroww.pyx  aroww_db.pyx  bench.py  cli.py  connection.py  optional.pxd  requirements.txt  setup.py  test.py
engine/: commands.cpp  commands.hpp  engine.cpp  engine.hpp
include/: aroww.hpp
lib/: aroww.cpp  aroww.hpp
network/: server.c  simple_socket_server.cpp  simple_socket_server.hpp  socket_server.cpp  socket_server.hpp
src/: CMakeLists.txt  client.cpp  commands.proto  server.cpp
src/common/: messages.cpp  messages.hpp  serialization.cpp  serialization.hpp  string_or_tomb.cpp  string_or_tomb.hpp
src/engine/: append_log.cpp  append_log.hpp  engine.cpp  engine.fwd.hpp  engine.hpp  interface.hpp  memtable.cpp  memtable.hpp  segment.cpp  segment.hpp  workers.cpp  workers.fwd.hpp  workers.hpp
src/lib/: aroww.cpp  aroww.hpp
src/network/: README.md  connection.cpp  messages.cpp  messages.hpp  socket_server.cpp  socket_server.hpp
src/utils/: client_utils.cpp  client_utils.hpp  closeable.cpp  closeable.hpp  format.hpp  logger.hpp  murmurhash3.cpp  serialization.cpp  serialization.hpp
tests/: CMakeLists.txt  benchmark.cpp  tests_client_utils.cpp  tests_config.hpp  tests_engine.cpp  tests_library.cpp  tests_main.cpp  tests_messages.cpp  tests_segment.cpp  tests_segments.cpp
